--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -4,3 +4,11 @@
   width: 100%;
   height: 1000px;
 }
+
+#popup-content {
+  width: 200px;
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
